packages/kit/test/apps/basics/src/routes/load/invalidation/search-params/multiple-search-params/+page.js
let count = 0;

export function load({ url: { searchParams } }) {
	searchParams.getAll('test');
	return {
		count: count++
	};
}
